<resources>

    <string name="app_name">SolarPowerCalcAndroid</string>
    <string name="menu_settings">Settings</string>
    <string name="entryfieldlength">10</string>
    <string name="button_navigation_next">Next >></string>
    <string name="button_navigation_back">&lt;&lt; Back</string>
    <string name="button_navigation_logout">&lt;&lt; Logout</string>
    <string name="button_navigation_back_home">Back to Home</string>
    <string name="tab_left">&lt;</string>
    <string name="tab_right">&gt;</string>
    
    <!-- Activity Titles -->
    <string name="title_activity_login">Solar Power Calc</string>
    <string name="title_activity_basic_input">Solar Power Calc</string>
	<string name="title_power_generation">PowerGeneration</string>
	<string name="title_activity_location">Location</string>
	<string name="title_activity_equipment">Equipment</string>
	<string name="title_activity_roof">Roof</string>
	<string name="title_activity_customerusage">Customer Usage</string>
	<string name="title_activity_tabbed">Input</string>
	<string name="title_activity_tabbed_output">Calculation Results</string>
	<string name="title_activity_output_summary">Summary</string>
	<string name="title_activity_output_financial">Financial</string>
	<string name="title_activity_registration">Register</string>
	<string name="title_activity_userhomepage">Home Page</string>
	<string name="title_activity_savings_graph">Savings</string>
	<string name="title_activity_cost_graph">Cost</string>
	
	
	
	<!-- Location View -->
	<string name="location_title">Location</string>
	<string name="location_region">Region:</string>
	<string name="location_city">City:</string>	
	<string name="location_sunlight">Average Daily Hours of Sunlight:</string>
	<string name="location_width">Roof Size Width (cm):</string>
	<string name="location_height">Roof Size Height (cm):</string>
	<string name="location_automaticlocation_latitude">Latitude:</string>
	<string name="location_automaticlocation_longitude">Longitude:</string>
	<string name="location_automaticlocationadress">Autogenerated Adress:</string>
	<string name="location_automaticlocationlocality">Autogenerated Locality:</string>
	<string name="location_automaticlocationcountry">Autogenerated Country:</string>
	<string name="location_automaticlocation_zip">Zip Code:</string>
	<string name="location_picklocation">Define your Location:</string>
	<string name="location_picklocationself">- by yourself</string>
	<string name="location_picklocationdevice">- through your device</string>
	<string name="location_or">OR</string>
	
	<!-- Equipment -->
	<string name="equipment_title">Equipment</string>
	<string name="equipment_panelnumber">Number of Panels:</string>
	<string name="equipment_systemcost">System Cost:</string>
	<string name="equipment_systemsize">System Size (KW):</string>
	<string name="equipment_inverterefficiency">Inverter Efficiency (%):</string>
	<string name="equipment_list_equipment">List of Equipment</string>
	<string name="equipment_list_equipment_prompt">Choose an Equipment</string>
	<string-array name="equipment_list_equipment_array">
	    <item>Solarpanel "Supersonic"</item>
	    <item>Sunpower Panel</item>
	</string-array>
	<string name="equipment_defaultnumberofpanels">10000</string>
	<string name="equipment_defaultsystemsize">20000</string>
	<string name="equipment_panelBrand">Panel Brands</string>
	<string name="equipment_panel_array_prompt">Select the brand</string>
	<string-array name="equipment_panelBrand_array">
	    <item>BP Solar Panels</item>
	    <item>Sunlinq Portable Solar Panels</item>
	    <item>SunPower Solar Panels</item>
	    <item>SunTech Solar Panels</item>
	    <item>Powerfilm Flexible Solar Panels</item>
	    <item>Sanyo Solar Panels</item>
	    <item>Global Solar Panels</item>
	    <item>Solarfun</item>
	    <item>REC Solar Panels</item>
	</string-array>
	<string name="equipment_inverterBrand">Inverter Brands</string>
	<string name="equipment_inverter_array_prompt">Select the brand</string>
	<string-array name="equipment_inverterBrand_array">
	    <item>BP Solar Inverters</item>
	    <item>Sunlinq Portable Solar Inverters</item>
	    <item>SunPower Solar Inverters</item>
	    <item>SunTech Solar Inverters</item>
	    <item>Powerfilm Flexible Solar Inverters</item>
	    <item>Sanyo Solar Inverters</item>
	    <item>Global Solar Inverters</item>
	    <item>Solarfun Inverters</item>
	    <item>REC Solar Inverters</item>
	    
	</string-array>
	
	<!-- Roof -->
	<string name="roof_title">Banks</string>
	<string name="roof_numberofpanels">Number of Panels</string>
	<string name="roof_shownumberofpanels">0</string>
	<string name="roof_banks1">Bank 1</string>
	<string name="roof_banks2">Bank 2</string>
	<string name="roof_banks_bank1_title">Bank 1</string>
	<string name="roof_banks_bank2_title">Bank 2</string>
	<string name="roof_banks_panelsbank1">Assign Number of Panels to Bank 1:</string>
	<string name="roof_banks_panelsbank2">Assign Number of Panels to Bank 2:</string>
	<string name="roof_banks_array_prompt">Choose a Bank</string>
	<string-array name="roof_banks_array">
	    <item>Bank 1</item>
	    <item>Bank 2</item>
	</string-array>
	<string name="roof_angleofbank1">Angle of Bank 1(degrees)</string>
	<string name="roof_orientationofbank1">Orientation of Bank 1(degrees)</string>
	<string name="roof_angleofbank2">Angle of Bank 2(degrees)</string>
	<string name="roof_orientationofbank2">Orientation of Bank 2(degrees)</string>
	<string-array name="roof_orientation_array">
	    <item>North</item>
	    <item>North East</item>
	    <item>North West</item>
	    <item>South</item>
	    <item>South East</item>
	    <item>South West</item>
	    <item>East</item>
	    <item>West</item>
	</string-array>
	<string name="roof_orientation_array_prompt">Choose the Orientation</string>
	<string name="default_integer">0</string>
	
	<!-- Basic Input -->
	<string name="basicinput_textview_width">166</string>
	<string name="basicinput_title">Summary of Provided Details</string>
	<string name="basicinput_equipment_title">Equipment Details</string>
	<string name="basicinput_roof_title">Roof Details</string>
	<string name="basicinput_roof_size_width">Roof Size Width (cm):</string>
	<string name="basicinput_roof_size_height">Roof Size Height (cm):</string>
	<string name="basicinput_roof_bank1_numpanels">Bank 1 Number Panels:</string>
	<string name="basicinput_roof_bank1_angle">Bank 1 Angle:</string>
	<string name="basicinput_roof_bank2_numpanels">Bank 2 Number Panels</string>
	<string name="basicinput_roof_bank2_angle">Bank 2 Angle:</string>
	<string name="basicinput_roof_bank1_orientation">Bank 1 Orientation:</string>
	<string name="basicinput_roof_bank2_orientation">Bank 2 Orientation:</string>
	<string name="basicinput_roof_efficiency_north">Efficiency Loss on North Roof:</string>
	<string name="basicinput_roof_efficiency_west">Efficiency Loss on West Roof:</string>
	<string name="basicinput_sunlight_title">Sunlight Details</string>
	<string name="basicinput_sunlight_dailyhours">Average daliy Hours of Sunlight:</string>
	<string name="basicinput_usage_title">Current Energy User Details</string>
	<string name="basicinput_usage_energyperday">Energy Used Per Day:</string>
	<string name="basicinput_usage_energyperdaylight">Energy Used Per Daylight Hour:</string>
	<string name="basicinput_usage_tariff">Tariff 11 Fee:</string>
	<string name="basicinput_usage_feedinfee">Feed in Fee:</string>
	<string name="basicinput_usage_feeincrease">Annual Tariff Fee Increase:</string>
	<string name="basicinput_button_calculate">Calculate</string>
	<string name="basicinput_button_reset">Reset</string>
	<string name="basicinput_button_save">Save</string>
	
	<!-- Customer Usage -->
	<string name="customerusage_title">Customer Usage</string>
	<string name="customerusage_currentusage_title">Current Usage</string>
	<string name="customerusage_currentusage_usageperday">Energy Used per Day (KWh):</string>
	<string name="customerusage_currentusage_usageperhour">Energy Used per Daylight Hours (KWh):</string>
	<string name="customerusage_currenttariff_title">Current Tariff</string>
	<string name="customerusage_currenttariff_fee">Tariff 11 Fee:</string>
	<string name="customerusage_currenttariff_feedin">Feed in Fee:</string>
	
	<!--  Registration -->
	<string name="registration_back">Back</string>
	<string name="registration_register">Register and Login</string>
	<string name="registration_username">Name:</string>
	<string name="registration_password">Password:</string>
	<string name="registration_password_repeat">Repeat Password:</string>
	<string name="registration_email">Email:</string>
	<string name="registration_user_type">User Type:</string>
	
    <string-array name="user_type_array">
        <item>Customer</item>
        <item>Sales Person</item>
        <item>Administrator</item>
    </string-array>

	
	<!--  Output -->
	<string name="output_button_navigation_next">Next Result</string>
	<string name="outputBack_button_navigation_back">Back</string>
	
	
	<!--  User Homepage -->
	<string name="userhomepage_title">Home</string>
	<string name="userhomepage_welcome">Welcome </string>
	<string name="userhomepage_button_new">New Calculation</string>
	<string name="userhomepage_button_edit">Load Calculation</string>
	<string name="userhomepage_button_delete">Delete Calculation</string>
	<string name="userhomepage_button_compare">Compare Calculations</string>
	<string name="userhomepage_button_template">Template</string>
	<string name="userhomepage_tablehead_checkbox"> </string>
	<string name="userhomepage_tablehead_name">Name</string>
	<string name="userhomepage_tablehead_datetime">Date</string>
	<string name="userhomepage_tablehead_status">Status</string>
	<string name="userhomepage_button_ok">OK</string>
	<string name="userhomepage_button_cancel">Cancel</string>
	<string name="userhomepage_dialog_deleteconfirmation">Do you want to delete the selected calculation(s) ?</string>
	
	
	<!-- Menu -->
	<string name="menu_input_save">Save</string>
	<string name="menu_input_export">Export</string>
	<string name="menu_input_print">Print</string>
	<string name="menu_tabbed_save">Save Calculation Inputs</string>
	<string name="menu_tabbed_output_save">Save Calculation</string>
	<string name="menu_tabbed_output_generate_pdf">Generate Pdf</string>
	
	
</resources>