<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >

    <!-- Author: Fabian -->
    
<LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout 
  		android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:id="@+id/textLocation_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        
        <TextView
	        android:id="@+id/textLocation_PickLocation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/location_picklocation"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textStyle="bold|italic"
	        android:paddingTop="3dp"
	        android:paddingBottom="5dp" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textLocation_PickLocationDevice"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_picklocationdevice" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_AutomaticLocation_Latitude"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_automaticlocation_latitude" />

        <TextView
            android:id="@+id/textLocation_AutomaticLocationShow_Latitude"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
           	/>
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_AutomaticLocation_Longitude"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_automaticlocation_longitude" />

        <TextView
            android:id="@+id/textLocation_AutomaticLocationShow_Longitude"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
           	/>
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_AutomaticLocation_Zip"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_automaticlocation_zip" />

        <TextView
            android:id="@+id/textLocation_AutomaticLocationShow_Zip"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
           	/>
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_Or"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_or"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textLocation_City"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_picklocationself" />

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_Sunlight"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_sunlight" />

        <EditText
            android:id="@+id/editLocation_Sunlight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_RoofWidth"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_width" />

        <EditText
            android:id="@+id/editLocation_RoofWidth"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textLocation_RoofHeight"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/location_height" />

        <EditText
            android:id="@+id/editLocation_RoofHeight"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    <Button
	        android:id="@+id/buttonLocation_Back"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="34dp"
	        android:text="@string/button_navigation_back_home" 
	        android:onClick="viewBack"/>        
        
	    <Button
	        android:id="@+id/buttonLocation_Next"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="95dp"
	        android:layout_height="34dp"
	        android:text="@string/button_navigation_next" 
	        android:onClick="viewNext"/>
    </LinearLayout>

</LinearLayout>    
    
</ScrollView>