<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/textCustomerUsage_Title"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:text="@string/customerusage_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/textCustomerUsage_CurrentUsage_Title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/customerusage_currentusage_title"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textStyle="bold|italic" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/textCustomerUsage_CurrentUsage_UsagePerDay"
            android:text="@string/customerusage_currentusage_usageperday"
            android:layout_width="146dp"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:id="@+id/editCustomerUsage_CurrentUsage_UsagePerDay"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/textCustomerUsage_CurrentUsage_UsagePerHour"
            android:text="@string/customerusage_currentusage_usageperhour"
            android:layout_width="146dp"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:id="@+id/editCustomerUsage_CurrentUsage_UsagePerHour"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/textCustomerUsage_CurrentTariff_Title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="@string/customerusage_currenttariff_title"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textStyle="bold|italic"
	        android:paddingTop="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/textCustomerUsage_CurrentTariff_Tariff"
            android:text="@string/customerusage_currenttariff_fee"
            android:layout_width="146dp"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:id="@+id/editCustomerUsage_CurrentTariff_Tariff"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:id="@+id/textCustomerUsage_CurrentTariff_FeedIn"
            android:text="@string/customerusage_currenttariff_feedin"
            android:layout_width="146dp"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:id="@+id/editCustomerUsage_CurrentTariff_FeedIn"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:ems="@string/entryfieldlength"
            android:inputType="number"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/buttonCustomerUsage_Back"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="95dp"
	        android:layout_height="34dp"
	        android:onClick="viewBack"
	        android:text="@string/button_navigation_back" />
	    
	    <Button
	        android:id="@+id/buttonCustomerUsage_Next"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="95dp"
	        android:layout_height="34dp"
	        android:text="@string/button_navigation_next" 
	        android:onClick="viewNext"/>
    </LinearLayout>

</LinearLayout>